fix: bg color not showing up

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --color-brand: var(--brand);
+  --color-brand: hsla(19, 80%, 57%, 1);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
